--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /tmp
 
 # dependencies
+/.git
 /node_modules
 /bower_components
 
@@ -21,3 +22,5 @@ testem.log
 .node_modules.ember-try/
 bower.json.ember-try
 package.json.ember-try
+
+package-lock.json
