--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "ember-cli-less": "^1.5.5",
+    "getstats": "^1.0.6"
   }
 }
